0027755: Visualization, V3d_View::ToPixMap() - fix image dump with MSAA turned on

OpenGl_View::Redraw() now handles correctly myTransientDrawToFront
with MSAA turned on and resolution not equal to window size.